# andromeda

./: .gitignore  build.sh  packages.x86_64  patch.sh
override/: bootstrap_packages.x86_64:diff  packages.x86_64:diff  pacman.conf:diff  profiledef.sh  profiledef.sh:diff
override/airootfs/etc/: group  gshadow  mkinitcpio.conf:diff  os-release  passwd  shadow
override/airootfs/etc/sddm.conf.d/: autologin.conf
override/airootfs/etc/skel/.config/: QtProject.conf  Trolltech.conf  gtkrc  gtkrc-2.0  kdeglobals  kfontinstuirc  konsolerc  plasma-org.kde.plasma.desktop-appletsrc  plasmarc  plasmashellrc  systemsettingsrc
override/airootfs/etc/skel/.config/autostart/: change-wallpaper.desktop
override/airootfs/etc/skel/.config/gtk-3.0/: colors.css
override/airootfs/etc/skel/.config/xsettingsd/: xsettingsd.conf
override/airootfs/etc/systemd/system/: first-install.service  stardust-client-init.service  stardust.service  wivrn.service  xr-login.service
override/airootfs/etc/udev/rules.d/: 99-android.rules
override/airootfs/usr/local/share/src/loginui/: Cargo.toml
override/airootfs/usr/local/share/src/loginui/src/: main.rs
override/airootfs/usr/login/: .bash_profile
override/efiboot/loader/entries/: 01-archiso-x86_64-linux.conf  02-archiso-x86_64-speech-linux.conf
override/grub/: grub.cfg:diff
override/saved/: Trolltech.conf  gtkrc  gtkrc-2.0  kdeglobals  plasma-org.kde.plasma.desktop-appletsrc
override/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg  archiso_tail.cfg
(+5 files in other folders)
