[package]
name = "loginui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
rustc-hash = "1.1.0"
dirs = "4.0.0"
confy = "0.5.1"
tracing = "0.1.37"
pam = "0.7.0"

color-eyre = "0.6.2"
anyhow = "1.0.68"
serde = "1.0.152"

